--- a/Alarm/Theme/Style.xaml
+++ b/Alarm/Theme/Style.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ShowAlarm">
+                    xmlns:local="clr-namespace:Alarm">
     <Color x:Key="TextBlockColor">White</Color>
     <Color x:Key="BgColor">#FFEEEEEE</Color>
-    <Color x:Key="	 borderColor">#FFEEEEEE</Color>
+    <Color x:Key="borderColor">#FFEEEEEE</Color>
     <Color x:Key="BtnColor">#FFB4B3B3</Color>
     <SolidColorBrush x:Key="HeaderBgBrush" Color="#FF88B4F1"/>
     <SolidColorBrush x:Key="TextBrush" Color="#FFFFFF" />
@@ -17,6 +17,57 @@
     <SolidColorBrush x:Key="DisabledBackgroundBrush" Color="#FF787878" />
     <SolidColorBrush x:Key="DisabledBorderBrush" Color="#AAA" />
     <SolidColorBrush x:Key="WindowBackgroundBrush" Color="#FF4e4e4e" />
+    <SolidColorBrush x:Key="ButtonNormalForeBrush" Color="#637e99" />
+    <SolidColorBrush x:Key="ButtonNormalBrush">#ffffff</SolidColorBrush>
+    <SolidColorBrush x:Key="ButtonBorderBrush">#cacaca</SolidColorBrush>
+    
+    <Style x:Key="NormalButtonStyle"  TargetType="{x:Type Button}">
+        <Setter Property="Foreground" Value="{DynamicResource ButtonNormalForeBrush}"/>
+        <Setter Property="Padding" Value="5,2"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="{DynamicResource ButtonNormalBrush}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource ButtonBorderBrush}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid Height="{TemplateBinding Height}" Width="{TemplateBinding Width}">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal"/>
+                                <VisualState x:Name="MouseOver">
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)" Storyboard.TargetName="border">
+                                            <EasingColorKeyFrame KeyTime="0" Value="#f8f8f8"/>
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Pressed">
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)" Storyboard.TargetName="border">
+                                            <EasingColorKeyFrame KeyTime="0" Value="#f8f8f8"/>
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Disabled">
+                                    <Storyboard>
+                                        <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="border">
+                                            <EasingDoubleKeyFrame KeyTime="0" Value="0.3"/>
+                                        </DoubleAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Border x:Name="border" Cursor="{TemplateBinding Cursor}" Padding="{TemplateBinding Padding}"  BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" CornerRadius="2" Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <Border x:Name="MaskBorder" BorderBrush="Black" BorderThickness="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#4C000000" Visibility="Collapsed"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
     <Style x:Key="BlueButtonStyle"  TargetType="{x:Type Button}">
         <Setter Property="Foreground" Value="{DynamicResource TextBrush}"/>
         <Setter Property="Padding" Value="5,2"/>
@@ -109,12 +160,6 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
-    <Style x:Key="HeaderTextBlockStyle" TargetType="{x:Type TextBlock}">
-        <Setter Property="TextWrapping" Value="NoWrap"/>
-        <Setter Property="TextTrimming" Value="None"/>
-        <Setter Property="FontFamily" Value="楷体"/>
-        <Setter Property="FontSize" Value="42.667"/>
     </Style>
     <!--阴阳格-->
     <Style x:Key="ListViewItemOdd"  TargetType="{x:Type ListViewItem}">
@@ -225,6 +270,12 @@
     </ControlTemplate>
     <!--阴阳格 End-->
     <!--Main TextBlock-->
+    <Style x:Key="HeaderTextBlockStyle" TargetType="{x:Type TextBlock}">
+        <Setter Property="TextWrapping" Value="NoWrap"/>
+        <Setter Property="TextTrimming" Value="None"/>
+        <Setter Property="FontFamily" Value="楷体"/>
+        <Setter Property="FontSize" Value="42.667"/>
+    </Style>
     <Style TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Foreground" Value="{DynamicResource NormalFontBrush}"/>
