--- a/Alarm/Control/EditTaskControl.xaml
+++ b/Alarm/Control/EditTaskControl.xaml
@@ -1,12 +1,28 @@
-﻿<UserControl x:Class="Alarm.EditTaskControl"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Alarm"
+             xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Alarm.EditTaskControl"
              mc:Ignorable="d" >
-    <Grid x:Name="Edit" Background="White" d:LayoutOverrides="LeftPosition, RightPosition, TopPosition, BottomPosition">
-        <Button x:Name="BtnSave" Width="75" VerticalAlignment="Top" HorizontalAlignment="Left" Content="Button"/>
-        <Button x:Name="BtnCancle" Width="75" VerticalAlignment="Top" HorizontalAlignment="Left" Content="Button"/>
-    </Grid>
+    <UserControl.Resources></UserControl.Resources>
+    <StackPanel x:Name="Edit" >
+        <StackPanel Orientation="Horizontal" d:LayoutOverrides="LeftPosition, RightPosition" Margin="0,10">
+            <TextBlock HorizontalAlignment="Left" Text="标题：" FontSize="16" VerticalAlignment="Center" Style="{DynamicResource LabelItemsNormalStyle}"/>
+            <TextBox x:Name="title" HorizontalAlignment="Left" Text="{Binding title,Mode=TwoWay}" Padding="4" Height="32" VerticalAlignment="Center" Margin="5,0" Width="280" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="0,10" d:LayoutOverrides="LeftPosition, RightPosition">
+            <TextBlock HorizontalAlignment="Left" Text="内容：" FontSize="16" VerticalAlignment="Center" Style="{DynamicResource LabelItemsNormalStyle}"/>
+            <TextBox x:Name="content" HorizontalAlignment="Left" Text="{Binding content,Mode=TwoWay}" Padding="4" Height="32" Width="280" VerticalAlignment="Center" Margin="5,0" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="0,10" d:LayoutOverrides="LeftPosition, RightPosition">
+            <TextBlock HorizontalAlignment="Left" Text="时间：" FontSize="16" VerticalAlignment="Center" Style="{DynamicResource LabelItemsNormalStyle}"/>
+            <TextBox HorizontalAlignment="Left" Text="" Padding="4" Height="32" Width="280" VerticalAlignment="Center" Margin="5,0" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Width="210" d:LayoutOverrides="LeftPosition, RightPosition, TopPosition, BottomPosition" Margin="0,10">
+            <Button x:Name="BtnSave" VerticalAlignment="Top" HorizontalAlignment="Left" Content="保存"  Style="{DynamicResource BlueButtonStyle}" Width="90" Height="32"/>
+            <Button x:Name="BtnCancle" VerticalAlignment="Top" HorizontalAlignment="Left" Content="取消"  Style="{DynamicResource NormalButtonStyle}" Margin="30,0,0,0" Width="90" Height="32"/>
+        </StackPanel>
+    </StackPanel>
 </UserControl>
