--- a/Alarm/Theme/Style.xaml
+++ b/Alarm/Theme/Style.xaml
@@ -20,7 +20,10 @@
     <SolidColorBrush x:Key="ButtonNormalForeBrush" Color="#637e99" />
     <SolidColorBrush x:Key="ButtonNormalBrush">#ffffff</SolidColorBrush>
     <SolidColorBrush x:Key="ButtonBorderBrush">#cacaca</SolidColorBrush>
-    
+    <Style x:Key="LabelItemsNormalStyle" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="{DynamicResource NormalFontBrush}"/>
+    </Style>
     <Style x:Key="NormalButtonStyle"  TargetType="{x:Type Button}">
         <Setter Property="Foreground" Value="{DynamicResource ButtonNormalForeBrush}"/>
         <Setter Property="Padding" Value="5,2"/>
