--- a/Alarm/Theme/Style.xaml
+++ b/Alarm/Theme/Style.xaml
@@ -24,10 +24,7 @@
     <SolidColorBrush x:Key="ControlBackgroundBrush" Color="#FFFFFFFF"/>
     <SolidColorBrush x:Key="NormalBorderBrush" Color="#FF333333" />
     <SolidColorBrush x:Key="BorderBrush" Color="#FF5F6164"></SolidColorBrush>
-    
     <SolidColorBrush x:Key="LightBrush" Color="#FF333333" />
-    
-    
     <Style x:Key="LabelItemsNormalStyle" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Foreground" Value="{DynamicResource NormalFontBrush}"/>
@@ -305,4 +302,12 @@
         <Setter Property="Foreground" Value="{DynamicResource DirectionsLightFontBrush}"/>
     </Style>
     <!--Main TextBlock End-->
+    <!--Task Bar Icon resource-->
+    <Border x:Key="TrayToolTip" Background="White" BorderBrush="Orange" CornerRadius="4" Opacity="0.8" Width="100" Height="24" BorderThickness="1">
+        <TextBlock Text="任务提醒" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="12" />
+    </Border>
+    <Border x:Key="TrayPopup" Background="White" BorderBrush="Orange" CornerRadius="4" Opacity="0.8" Width="100" Height="24" BorderThickness="1">
+        <Button Content="关闭"/>
+    </Border>
+    <!--resource END-->
 </ResourceDictionary>
