--- a/Alarm/Control/EditTaskControl.xaml
+++ b/Alarm/Control/EditTaskControl.xaml
@@ -32,8 +32,8 @@
             <Control:DropDatePicker d:LayoutOverrides="Width, Height" Grid.Column="1"/>
         </Grid>
         <Grid Margin="0,10" HorizontalAlignment="Center">
-            <Button x:Name="BtnSave" Content="保存"  Style="{DynamicResource BlueButtonStyle}" Width="90" Margin="50,0,0,0" HorizontalAlignment="Left" d:LayoutOverrides="LeftMargin, RightMargin"/>
-            <Button x:Name="BtnCancle" Content="取消"  Style="{DynamicResource NormalButtonStyle}" Width="90" Margin="170,0,0,0" HorizontalAlignment="Left"/>
+            <Button x:Name="BtnSave" Content="保存"  Style="{DynamicResource BlueButtonStyle}" Margin="50,0,0,0" HorizontalAlignment="Left" d:LayoutOverrides="LeftMargin, RightMargin" Width="90" Height="32"/>
+            <Button x:Name="BtnCancle" Content="取消"  Style="{DynamicResource NormalButtonStyle}" Margin="170,0,0,0" HorizontalAlignment="Left" Width="90" Height="32"/>
         </Grid>
     </StackPanel>
 </UserControl>
