--- a/Alarm/Theme/Style.xaml
+++ b/Alarm/Theme/Style.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Alarm">
+                    xmlns:local="clr-namespace:Alarm" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d">
     <Color x:Key="TextBlockColor">White</Color>
     <Color x:Key="BgColor">#FFEEEEEE</Color>
     <Color x:Key="borderColor">#FFEEEEEE</Color>
@@ -23,7 +23,7 @@
     <SolidColorBrush x:Key="BlueFontColor">#637e99</SolidColorBrush>
     <SolidColorBrush x:Key="ControlBackgroundBrush" Color="#FFFFFFFF"/>
     <SolidColorBrush x:Key="NormalBorderBrush" Color="#FF333333" />
-    <SolidColorBrush x:Key="BorderBrush" Color="#FF5F6164"></SolidColorBrush>
+    <SolidColorBrush x:Key="BorderBrush" Color="#FF5F6164"/>
     <SolidColorBrush x:Key="LightBrush" Color="#FF333333" />
     <Style x:Key="LabelItemsNormalStyle" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="16"/>
@@ -137,7 +137,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Grid Width="90" Height="32">
+                    <Grid Width="{TemplateBinding Width}" Height="{TemplateBinding Height}">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
                                 <VisualState x:Name="Normal"/>
@@ -173,6 +173,9 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <!--阴阳格 End-->
+    <!--Main TextBlock End-->
+    <!--resource END-->
     <!--阴阳格-->
     <Style x:Key="ListViewItemOdd"  TargetType="{x:Type ListViewItem}">
         <Setter Property="Foreground" Value="{DynamicResource NormalFontBrush}" />
@@ -280,7 +283,6 @@
             </MultiTrigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
-    <!--阴阳格 End-->
     <!--Main TextBlock-->
     <Style x:Key="HeaderTextBlockStyle" TargetType="{x:Type TextBlock}">
         <Setter Property="TextWrapping" Value="NoWrap"/>
@@ -301,7 +303,6 @@
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Foreground" Value="{DynamicResource DirectionsLightFontBrush}"/>
     </Style>
-    <!--Main TextBlock End-->
     <!--Task Bar Icon resource-->
     <Border x:Key="TrayToolTip" Background="White" BorderBrush="Orange" CornerRadius="4" Opacity="0.8" Width="100" Height="24" BorderThickness="1">
         <TextBlock Text="任务提醒" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="12" />
@@ -309,5 +310,4 @@
     <Border x:Key="TrayPopup" Background="White" BorderBrush="Orange" CornerRadius="4" Opacity="0.8" Width="100" Height="24" BorderThickness="1">
         <Button Content="关闭"/>
     </Border>
-    <!--resource END-->
 </ResourceDictionary>
